# SLAM

./: .gitignore  CMakeLists.txt  README.md  ch3_eigen.cpp  ch6_nonlinear_ceres.cpp  ch6_nonlinear_g2o.cpp  ch6_nonlinear_gaussNewton.cpp  ch7_orb_EpipolarGeometry.cpp  ch7_orb_opencv.cpp  ch7_pnp_BA.cpp  ch7_pnp_DLT.cpp  main.cpp
Calibration/: CaliParameters.txt
Include/: monoCalibration.hpp  orbMatcher.hpp  slamPlot.hpp
app/: CMakeLists.txt  main.cpp
docs/: IMU_Quat_theory.html  IMU_Quat_theory.md  notes.md  projectOverview.drawio
include/: basic_object.h
include/mySLAM/: backEnd.h  common_include.h  feature2d.h  frame.h  frontEnd.h  gui.h  imu.h  landMark.h  map.h  orbMatcher.h  videoCapture.h  vslamMgr.h
learn_slam/: CMakeLists.txt  ch2_eigen.cpp  ch3_coordinateTransform.cpp  ch3_lieGroup.cpp  ch3_plotTrajectory.cpp  ch4_lieGroup.cpp  ch5_cam_calibration.cpp  ch5_pinHoleModel.cpp  ch6_nonlinear_ceres.cpp  ch6_nonlinear_g2o.cpp  ch6_nonlinear_gaussNewton.m  ch7_orb.cpp  ch7_orb_EpipolarGeometry.cpp  ch7_orb_epipolar_fromGit.cpp  ch7_orb_myself.cpp  ch7_orb_opencv.cpp  ch7_pnp.cpp  ch7_pnp_BA.cpp
learn_slam/Include/: monoCalibration.hpp  slamPlot.hpp  stereoCalibration.hpp  visualOdometry.hpp
learn_slam/docs/: notes.html  notes.md
learn_slam/src/: test.cpp
src/: CMakeLists.txt  backEnd.cpp  feature2d.cpp  frame.cpp  frontEnd.cpp  gui.cpp  imu.cpp  landMark.cpp  map.cpp  videoCapture.cpp  vslamMgr.cpp
